--- a/index.html
+++ b/index.html
@@ -19,40 +19,42 @@
     <!-- Start of Header Container -->
     <header>
         <nav class="navbar">
-          <div class="container flex">
-            <a href="index.html" class="logo">Evans</a>
-            <ul class="menu">
-              <li><a href="#portfolio">Portfolio</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-            <i class='bx bx-menu'></i>
-          </div>
-        </nav>
-    
-        <!-- start of banner -->
-        <section class="banner">
-          <div class="container">
-            <div class="banner-text">
-              <h1>I’m Nyamekye. <br>
-                Glad to see you!</h1>
-              <p>I’m a software developer! I can help you build a product , feature or website Look through some of my
-                work and experience! If you like what you see and have a project you need coded, don’t hesitate to
-                contact me.</p>
-              <a href="#" class="link">LET’S CONNECT</a>
-              <ul class="social">
-                <li><a href="twitter.com"><img src="images/icons/Twitter.png" alt="twitter-img"></a></li>
-                <li><a href="linkedin.com"><img src="images/icons/Linkedin.png" alt="linkedin-img"></a></li>
-                <li><a href="medium.com"><img src="images/icons/Medium.png" alt="Medium-img"></a></li>
-                <li><a href="github.com"><img src="images/icons/Git.png" alt="Github-img"></a></li>
-                <li><a href="AngelList.com"><img src="images/icons/AngelList.png" alt="AngelList-img"></a></li>
-              </ul>
+            <div class="container flex">
+                <a href="index.html" class="logo">Evans</a>
+                <ul class="menu">
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <i class='bx bx-menu'></i>
             </div>
-          </div>
-        </section>
-        <!-- end of banner -->
-      </header>
-      <!-- End of header container -->
+        </nav>
+    </header>
+    <!-- End of header container -->
+
+    <!-- start of Main -->
+    <main class="banner">
+        <div class="container">
+            <div class="banner-text">
+                <h1>I’m Nyamekye.
+                    Glad to see you!</h1>
+                <p>I’m a software developer! I can help you build a product , feature or website Look through some
+                    of my
+                    work and experience! If you like what you see and have a project you need coded, don’t hesitate
+                    to
+                    contact me.</p>
+                <a href="#" class="link">LET’S CONNECT</a>
+                <ul class="social">
+                    <li><a href="twitter.com"><img src="images/icons/Twitter.png" alt="twitter-img"></a></li>
+                    <li><a href="linkedin.com"><img src="images/icons/Linkedin.png" alt="linkedin-img"></a></li>
+                    <li><a href="medium.com"><img src="images/icons/Medium.png" alt="Medium-img"></a></li>
+                    <li><a href="github.com"><img src="images/icons/Git.png" alt="Github-img"></a></li>
+                    <li><a href="AngelList.com"><img src="images/icons/AngelList.png" alt="AngelList-img"></a></li>
+                </ul>
+            </div>
+        </div>
+    </main>
+    <!-- end of main -->
 </body>
 
 </html>
