Made chnages to index.html

--- a/index.html
+++ b/index.html
@@ -33,27 +33,30 @@
     <!-- End of header container -->
 
     <!-- start of Main -->
-    <main class="banner">
-        <div class="container">
-            <div class="banner-text">
-                <h1>I’m Nyamekye.
-                    Glad to see you!</h1>
-                <p>I’m a software developer! I can help you build a product , feature or website Look through some
-                    of my
-                    work and experience! If you like what you see and have a project you need coded, don’t hesitate
-                    to
-                    contact me.</p>
-                <a href="#" class="link">LET’S CONNECT</a>
-                <ul class="social">
-                    <li><a href="twitter.com"><img src="images/icons/Twitter.png" alt="twitter-img"></a></li>
-                    <li><a href="linkedin.com"><img src="images/icons/Linkedin.png" alt="linkedin-img"></a></li>
-                    <li><a href="medium.com"><img src="images/icons/Medium.png" alt="Medium-img"></a></li>
-                    <li><a href="github.com"><img src="images/icons/Git.png" alt="Github-img"></a></li>
-                    <li><a href="AngelList.com"><img src="images/icons/AngelList.png" alt="AngelList-img"></a></li>
-                </ul>
+    <main>
+        <section class="banner">
+            <div class="container">
+                <div class="banner-text">
+                    <h1>I’m Nyamekye.
+                        Glad to see you!</h1>
+                    <p>I’m a software developer! I can help you build a product , feature or website Look through some
+                        of my
+                        work and experience! If you like what you see and have a project you need coded, don’t hesitate
+                        to
+                        contact me.</p>
+                    <a href="#" class="link">LET’S CONNECT</a>
+                    <ul class="social">
+                        <li><a href="twitter.com"><img src="images/icons/Twitter.png" alt="twitter-img"></a></li>
+                        <li><a href="linkedin.com"><img src="images/icons/Linkedin.png" alt="linkedin-img"></a></li>
+                        <li><a href="medium.com"><img src="images/icons/Medium.png" alt="Medium-img"></a></li>
+                        <li><a href="github.com"><img src="images/icons/Git.png" alt="Github-img"></a></li>
+                        <li><a href="AngelList.com"><img src="images/icons/AngelList.png" alt="AngelList-img"></a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
+        </section>
     </main>
+
     <!-- end of main -->
 </body>
 
