--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+        crossorigin="anonymous" />
 
 <body>
     <!-- Start of Header Container -->
@@ -34,6 +38,7 @@
 
     <!-- start of Main -->
     <main>
+        <!-- start of Banner -->
         <section class="banner">
             <div class="container">
                 <div class="banner-text">
@@ -55,8 +60,106 @@
                 </div>
             </div>
         </section>
-    </main>
+        <!-- end of Banner -->
 
+        <!-- start of works -->
+        <section class="work">
+            <div class="container">
+                <div class="card">
+                    <div class="card-left">
+                        <img src="images/work/Snapshoot Portfolio.png" alt="snap-card">
+                    </div>
+                    <div class="card-right">
+                        <h2>Tonic</h2>
+                        <ul class="cano">
+                            <li>CANOPY<i class="fa fa-circle"></i></li>
+                            <li>Back End Dev<i class="fa fa-circle"></i></li>
+                            <li>2015</li>
+                        </ul>
+                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                        <ul class="lang">
+                            <li><a href="#">HTML</a></li>
+                            <li><a href="#">CSS</a></li>
+                            <li><a href="#">Javascript</a></li>
+                        </ul>
+                        <button class="btn-default">See project</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-left-mobile">
+                        <img src="images/work/Snapshoot Portfolio(1).png" alt="snap-card">
+                    </div>
+                    <div class="card-right">
+                        <h2>Multi-Post
+                            Stories</h2>
+                        <ul class="cano">
+                            <li>CANOPY<i class="fa fa-circle"></i></li>
+                            <li>Back End Dev<i class="fa fa-circle"></i></li>
+                            <li>2015</li>
+                        </ul>
+                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                        <ul class="lang">
+                            <li><a href="#">HTML</a></li>
+                            <li><a href="#">CSS</a></li>
+                            <li><a href="#">Javascript</a></li>
+                        </ul>
+                        <button class="btn-default">See project</button>
+                    </div>
+                    <div class="card-left-desk">
+                        <img src="images/work/Snapshoot Portfolio(1).png" alt="snap-card">
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-left">
+                        <img src="images/work/Snapshoot Portfolio(2).png" alt="snap-card">
+                    </div>
+                    <div class="card-right">
+                        <h2>Tonic</h2>
+                        <ul class="cano">
+                            <li>CANOPY<i class="fa fa-circle"></i></li>
+                            <li>Back End Dev<i class="fa fa-circle"></i></li>
+                            <li>2015</li>
+                        </ul>
+                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                        <ul class="lang">
+                            <li><a href="#">HTML</a></li>
+                            <li><a href="#">CSS</a></li>
+                            <li><a href="#">Javascript</a></li>
+                        </ul>
+                        <button class="btn-default">See project</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-left-mobile">
+                        <img src="images/work/Snapshoot Portfolio(3).png" alt="snap-card">
+                    </div>
+                    <div class="card-right">
+                        <h2>Multi-Post
+                            Stories</h2>
+                        <ul class="cano">
+                            <li>CANOPY<i class="fa fa-circle"></i></li>
+                            <li>Back End Dev<i class="fa fa-circle"></i></li>
+                            <li>2015</li>
+                        </ul>
+                        <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+                        <ul class="lang">
+                            <li><a href="#">HTML</a></li>
+                            <li><a href="#">CSS</a></li>
+                            <li><a href="#">Javascript</a></li>
+                        </ul>
+                        <button class="btn-default">See project</button>
+                    </div>
+                    <div class="card-left-desk">
+                        <img src="images/work/Snapshoot Portfolio(3).png" alt="snap-card">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end of works -->
+    </main>
     <!-- end of main -->
 </body>
 
