Add about-section and Made corrections in index.html required by reviewer

--- a/index.html
+++ b/index.html
@@ -159,6 +159,72 @@
             </div>
         </section>
         <!-- end of works -->
+
+
+        <!-- start of About -->
+        <section class="about">
+            <div class="container">
+                <div class="about-text">
+                    <h1>About Myself</h1>
+                    <p>Hello I’m a software developer! I can help you build a product , feature or website. Look through
+                        some of
+                        my work and experience! If you like what you see and have a project you need coded, don’t
+                        hesitate to
+                        contact me.</p>
+                    <a href="#" class="link">LET’S CONNECT</a>
+                    <ul class="social-nl">
+                        <li><a href="github.com"><i class="fab fa-github-alt"></i></a></li>
+                        <li><a href="linkedin.com"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="AngelList.com"><i class="fab fa-angellist"></i></a></li>
+                        <li><a href="twitter.com"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="medium.com"><i class="fab fa-medium-m"></i></a></li>
+                    </ul>
+                    <button class="btn-default">Get my resume</button>
+                </div>
+
+                <!-- skills -->
+                <div class="skills">
+                    <ul class="skill">
+                        <li>
+                            <div class="lan">
+                                <h2>Languages</h2>
+                                <i class="fa fa-chevron-down"></i>
+                            </div>
+
+                            <ul class="skill-lang flex">
+                                <li>
+                                    <img src="images/lg-banners/Ellipse 1.png" alt="Javascript">
+                                    <h2>Javascript</h2>
+                                </li>
+                                <li>
+                                    <img src="images/lg-banners/Ellipse 1 (2).png" alt="HTML">
+                                    <h2>HTML</h2>
+                                </li>
+                                <li>
+                                    <img src="images/lg-banners/Ellipse 1 (3).png" alt="CSS">
+                                    <h2>CSS</h2>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <span>
+                                <h2>Frameworks</h2>
+                                <i class="fa fa-chevron-right"></i>
+                            </span>
+                        </li>
+                        <li>
+                            <span>
+                                <h2>Skills</h2>
+                                <i class="fa fa-chevron-right"></i>
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- End of About -->
+
     </main>
     <!-- end of main -->
 </body>
