Add contact -form

--- a/index.html
+++ b/index.html
@@ -160,7 +160,6 @@
         </section>
         <!-- end of works -->
 
-
         <!-- start of About -->
         <section class="about">
             <div class="container">
@@ -224,6 +223,40 @@
             </div>
         </section>
         <!-- End of About -->
+
+        <!-- Start of Contact form -->
+        <section class="contact-white" id="contact">
+            <div class="contact">
+                <div class="container">
+                    <h1>Contact me</h1>
+                    <p>If you have an application you are interested in developing, a feature that you need built or a
+                        project that
+                        needs coding.
+                        I’d love to help with it!</p>
+                    <form id="form" action="https://formspree.io/f/xqkoyoyy" method="POST">
+                        <div class="form-control">
+                            <input id="name" type="text" name="names" placeholder="Lorem Ipsum" maxlength="30"
+                                required />
+                        </div>
+                        <div class="form-control">
+                            <input id="email" type="email" name="email" placeholder="loremipsum@gmail.com"
+                                maxlength="30" required />
+                        </div>
+                        <div class="form-control">
+                            <textarea name="message" id="textarea" placeholder="Write your message here..." cols="30"
+                                rows="10" maxlength="500" required></textarea>
+                        </div>
+                        <div class="form-btn">
+                            <button type="submit" class="btn-white">
+                                <h5>Get in touch</h5>
+                            </button>
+                            <div id="validate"></div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <!-- End of Contact form -->
 
     </main>
     <!-- end of main -->
