--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <p>
               If you have an application you are interested in developing, a
               feature that you need built or a project that needs coding. I’d
-              love to help with it!
+              love to help with it!jkedgjkoefjkwkegkrf
             </p>
             <form
               id="form"
