Modified index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
       <section class="contact-white" id="contact">
         <div class="contact">
           <div class="container">
-            <h1>Contact me</h1>
+            <h3>Contact me</h3>
             <p>
               If you have an application you are interested in developing, a
               feature that you need built or a project that needs coding. I’d
@@ -322,7 +322,6 @@
                   type="email"
                   name="email"
                   placeholder="loremipsum@gmail.com"
-                  maxlength="30"
                   required
                 />
               </div>
@@ -338,9 +337,7 @@
                 ></textarea>
               </div>
               <div class="form-btn">
-                <button type="submit" class="btn-white">
-                  <h5>Get in touch</h5>
-                </button>
+                <button type="submit" class="btn-white">Get in touch</button>
                 <div id="validate"></div>
               </div>
             </form>
