Made changes in index.html and styles.css as requested by Reviewer

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="banner">
       <div class="container">
         <div class="banner-text">
-          <h1>I’m Nyamekye. Glad to see you!</h1>
+          <h1>I’m Nyamekye.<br> Glad to see you!</h1>
           <p>
             I’m a software developer! I can help you build a product , feature
             or website Look through some of my work and experience! If you
