Add mobile-menu files

--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-        <i class="bx bx-menu"></i>
+        <i id="nav-open" class="bx bx-menu"></i>
       </div>
+      <ul class="mobile-nav" id="mobile-nav">
+        <i id="close-menu" class="bx bx-x"></i>
+        <li><a href="#portfolio" class="nav-link-close">Portfolio</a></li>
+        <li><a href="#about" class="nav-link-close">About</a></li>
+        <li><a href="#contact" class="nav-link-close">Contact</a></li>
+      </ul>
     </nav>
   </header>
   <!-- End of header container -->
@@ -287,6 +293,9 @@
     <!-- End of Contact form -->
   </main>
   <!-- end of main -->
+
+  <!-- js file -->
+  <script src="main.js"></script>
 </body>
 
 </html>
